Fix button spacing on cards and replace movement with glow

--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -4,11 +4,12 @@
   background: white;
   border-radius: 10px;
   box-shadow: 1px 1px 2px var(--clr-neutral-200);
-  transition: all 0.2s ease-in-out;
-  transition-delay: 0.2s;
+  transition: 0.2s ease-in-out;
+  transition-delay: 0.1s;
 }
 .card:hover {
-  transform: translateY(-1rem);
+  /* box-shadow: var(--clr-primary-original) 0px 22px 70px 4px; */
+  box-shadow: var(--clr-primary-original) 0px 0px 40px -10px;
 }
 
 .title {
@@ -56,5 +57,7 @@
 
 .nav {
   margin-top: 3rem;
+  margin-left: 0.5rem;
+  padding-bottom: 1rem !important;
   padding: 8px;
 }
